<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2018 - 2021 Swiss Federal Institute of Technology Lausanne (EPFL)
  ~ Copyright 2021 - 2024 EBRAINS AISBL
  ~ Copyright 2024 - 2025 ETH Zurich
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~  This open source software code was developed in part or in whole in the
  ~  Human Brain Project, funded from the European Union's Horizon 2020
  ~  Framework Programme for Research and Innovation under
  ~  Specific Grant Agreements No. 720270, No. 785907, and No. 945539
  ~  (Human Brain Project SGA1, SGA2 and SGA3).
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.marmotgraph</groupId>
    <artifactId>marmotgraph-core</artifactId>
    <packaging>pom</packaging>
    <version>4.0</version>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <!-- Central place for versions -->
    <properties>
        <java.version>21</java.version>
        <spring-boot.version>4.0.2</spring-boot.version>
    </properties>

    <!-- CENTRALIZED DEPENDENCY MANAGEMENT -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>


            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>4.2.1</version>
            </dependency>

            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>8.1</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.parsson</groupId>
                <artifactId>parsson</artifactId>
                <version>1.0.5</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.14</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.10.0</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-bom</artifactId>
                <version>2.8.14</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.apicatalog</groupId>
                <artifactId>titanium-json-ld</artifactId>
                <version>1.3.1</version>
            </dependency>

            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>jakarta.json</artifactId>
                <version>2.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.7</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.11</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.14.0</version>
            </dependency>

            <!-- Your own modules (optional but recommended) -->
            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-commons</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-microservice-commons</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-auth</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-tenants</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-jsonld</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-primarystore</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-graphdb-neo4j</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-graphdb-nograph</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph</groupId>
                <artifactId>marmotgraph-graphdb-commons</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <modules>
        <module>modules/marmotgraph-commons</module>
        <module>modules/marmotgraph-auth</module>
        <module>modules/marmotgraph-api</module>
        <module>modules/marmotgraph-tenants</module>
        <module>modules/marmotgraph-primarystore</module>
        <module>marmotgraph-core-boot</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>

                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
